[package]
name = "vtspam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = { version = "0.7.0" }
exe = { version = "0.5.6" }
ureq = { version = "2.6.2", features = ["json"] }
clap = { version = "4.1.11", features = ["derive"] }
rayon = { version = "1.7.0" }
anyhow = { version = "1"}
crossbeam-channel = { version = "0.5.7" }
serde_json = { version = "1.0.94" }
